[package] 
name = "stm32f4-hello" 
version = "0.1.0" 
edition = "2021" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 

[dependencies] 
embedded-hal = "0.2" 
cortex-m-rtic = "1.0" 
cortex-m = "0.7.4" 
cortex-m-rt = "0.7" 
cortex-m-semihosting = "0.5" 
micromath = "2"
heapless = "0.7" 
panic-semihosting = "0.5.3"
systick-monotonic = "1.0.0"

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f407"]

[dependencies.rtt-target] 
version = "0.3.1" 
features = ["cortex-m"] 

[dependencies.panic-rtt-target] 
version = "0.1.2" 
features = ["cortex-m"]
